// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Languages should show dialog 1`] = `
<div
  data-v-app=""
>
  
  <h1
    class="listtop"
  >
    Configure languages
  </h1>
  
  <div>
    <table
      class="dynatable"
    >
      <thead>
        <tr>
          
          <th>
            Code
          </th>
          <th>
            Description
          </th>
          
          <th />
        </tr>
      </thead>
      
      <tbody
        class="dynatableData"
      >
        
        <tr
          class="data-row"
        >
          
          <td
            class="data-entry"
          >
            <input
              class="neutral input-box"
              name="code"
              readonly=""
              type="text"
              value="en"
            />
          </td>
          <td
            class="data-entry"
          >
            <input
              class="neutral input-box"
              name="description"
              readonly=""
              type="text"
              value="English"
            />
          </td>
          
          <td>
            <!--v-if-->
            <!--v-if-->
          </td>
        </tr>
        <tr
          class="data-row"
        >
          
          <td
            class="data-entry"
          >
            <input
              class="neutral input-box"
              name="code"
              readonly=""
              type="text"
              value="fr"
            />
          </td>
          <td
            class="data-entry"
          >
            <input
              class="neutral input-box"
              name="description"
              readonly=""
              type="text"
              value="Français"
            />
          </td>
          
          <td>
            <!--v-if-->
            <!--v-if-->
          </td>
        </tr>
        
      </tbody>
      <!--v-if-->
      
    </table>
  </div>
  <div>
    <span>
      Download: 
    </span>
    
    <span>
      <a
        href="http://localhost/erp/api/v0/languages?format=HTML"
        target="_blank"
      >
        [ HTML ]
      </a>
    </span>
    
  </div>
  
  
</div>
`;

exports[`Languages should show dialog with editable data 1`] = `
<div
  data-v-app=""
>
  
  <h1
    class="listtop"
  >
    Configure languages
  </h1>
  
  <div>
    <table
      class="dynatable"
    >
      <thead>
        <tr>
          
          <th>
            Code
          </th>
          <th>
            Description
          </th>
          
          <th />
        </tr>
      </thead>
      
      <tbody
        class="dynatableData"
      >
        
        <tr
          class="data-row"
        >
          
          <td
            class="data-entry"
          >
            <input
              class="neutral input-box"
              name="code"
              readonly=""
              type="text"
              value="en"
            />
          </td>
          <td
            class="data-entry"
          >
            <input
              class="neutral input-box"
              name="description"
              readonly=""
              type="text"
              value="English"
            />
          </td>
          
          <td>
            
            <button
              name="modify"
            >
              
              Modify
              
            </button>
            <button
              disabled=""
              name="save"
            >
              
              Save
              
            </button>
            <button
              disabled=""
              name="cancel"
            >
              
              Cancel
              
            </button>
            <!--v-if-->
            
            <!--v-if-->
          </td>
        </tr>
        <tr
          class="data-row"
        >
          
          <td
            class="data-entry"
          >
            <input
              class="neutral input-box"
              name="code"
              readonly=""
              type="text"
              value="fr"
            />
          </td>
          <td
            class="data-entry"
          >
            <input
              class="neutral input-box"
              name="description"
              readonly=""
              type="text"
              value="Français"
            />
          </td>
          
          <td>
            
            <button
              name="modify"
            >
              
              Modify
              
            </button>
            <button
              disabled=""
              name="save"
            >
              
              Save
              
            </button>
            <button
              disabled=""
              name="cancel"
            >
              
              Cancel
              
            </button>
            <!--v-if-->
            
            <!--v-if-->
          </td>
        </tr>
        
      </tbody>
      <!--v-if-->
      
    </table>
  </div>
  <div>
    <span>
      Download: 
    </span>
    
    <span>
      <a
        href="http://localhost/erp/api/v0/languages?format=HTML"
        target="_blank"
      >
        [ HTML ]
      </a>
    </span>
    
  </div>
  
  
</div>
`;
